--- a/style.css
+++ b/style.css
@@ -84,11 +84,16 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
 }
 
 .light #swith button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
+}
+
+#swith button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #swith span {
@@ -176,5 +181,24 @@ footer {
 
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg)
+  }
+ }
+
+ /* animals */
+ @keyframes slide-in {
+  from {
+    left:0;
+  }
+  to {
+    left:50%
+  }
+ }
+
+ @keyframes slide-back {
+  from{
+    left:50%;
+  }
+  to{
+    left:0;
   }
  }
